renamed app.vue to app.js

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <!--fetch necessary javascript including vue and axios libraries-->
   <script src="https://unpkg.com/vue@2.6"></script>
   <script src="https://unpkg.com/axios@0.20.0"></script>
-  <script src="app.vue"></script>
+  <script src="app.js"></script>
 
 </body>
 
